Unpick code cleanup 1