@@ -1,7 +1,7 @@
 /*
  * This file is part of fabric-loom, licensed under the MIT License (MIT).
  *
- * Copyright (c) 2022 FabricMC
+ * Copyright (c) 2025 FabricMC
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,27 +22,47 @@
  * SOFTWARE.
  */
 
-package net.fabricmc.loom.configuration.providers.mappings.extras.unpick;
+package net.fabricmc.loom.configuration.providers.mappings.unpick;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
-import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.Nullable;
+import com.google.gson.JsonObject;
 
-import net.fabricmc.loom.configuration.providers.mappings.unpick.UnpickMetadata;
+import net.fabricmc.loom.LoomGradlePlugin;
 
-@ApiStatus.Experimental
-public interface UnpickLayer {
-	@Nullable
-	UnpickData getUnpickData() throws IOException;
+public sealed interface UnpickMetadata permits UnpickMetadata.V1 {
+	String UNPICK_METADATA_PATH = "extras/unpick.json";
+	String UNPICK_DEFINITIONS_PATH = "extras/definitions.unpick";
 
-	record UnpickData(UnpickMetadata metadata, byte[] rawMetadata, byte[] definitions) {
-		public static UnpickData read(Path metadataPath, Path definitionPath) throws IOException {
-			final byte[] definitions = Files.readAllBytes(definitionPath);
-			final byte[] metadata = Files.readAllBytes(metadataPath);
-			return new UnpickData(UnpickMetadata.parse(metadataPath), metadata, definitions);
+	boolean hasConstants();
+
+	record V1(String unpickGroup, String unpickVersion) implements UnpickMetadata {
+		@Override
+		public boolean hasConstants() {
+			return true;
+		}
+	}
+
+	static UnpickMetadata parse(Path path) throws IOException {
+		JsonObject jsonObject = LoomGradlePlugin.GSON.fromJson(Files.readString(path, StandardCharsets.UTF_8), JsonObject.class);
+
+		if (!jsonObject.has("version")) {
+			throw new UnsupportedOperationException("Missing unpick metadata version");
+		}
+
+		int version = jsonObject.get("version").getAsInt();
+
+		switch (version) {
+		case 1 -> {
+			return new V1(
+					jsonObject.get("unpickGroup").getAsString(),
+					jsonObject.get("unpickVersion").getAsString()
+			);
+		}
+		default -> throw new UnsupportedOperationException("Unsupported unpick metadata version: %s. Please update loom.".formatted(version));
 		}
 	}
 }
